Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30617

QtConcurrentMap does not map QJsonArray

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.2.1, 6.3.0 Alpha
    • 5.0.2
    • Core: QtConcurrent
    • None
    • win7 + vs 2010, osx 10.8
    • macOS
    • 8
    • 28e194d3b25f5fc6e17cce8dddba7f7e16002c43 (qt/qtbase/dev) 280b55111f6414a4497becfb982a84735dd8a7f0 (qt/qtbase/6.1) a3b93c9aa39e33275eb59f9e64432cd336097334 (qt/qtbase/6.2)
    • Foundation_Sprint 41 (Team 1), Team 1 Foundation_Sprint 42

    Description

      QJsonArray array

      QtConcurrent::blockingMapped(array, scaled);

      does not compile success!

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sonakur Sona Kurazyan
            awfan fanjunwu
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes